# Dualarm_abs

./: CMakeLists.txt  README.md
include/: controller.h  controller_abs.h  custommath.h  quadraticprogram.h  robotmodel.h
libs/data/: param.yaml
model/: dualarm1.urdf  dualarm1.xml  dualarm_hands.xml  dualarm_hands_mod.urdf  dualarm_hands_mod_sim.xml  dualarm_hands_mod_sim1.xml  dualarm_mod.xml  duararm_mod_sim.xml
src/: controller.cpp  controller_abs.cpp  controller_backup.cpp  controller_j15.cpp  main.cc  main1.cc  plot.py  quadraticprogram.cc  robotmodel.cpp  robotmodel1.cpp  robotmodel2.cpp  robotmodel_co.cpp  test.cpp
